--- a/custom_components/earn_e_p1/manifest.json
+++ b/custom_components/earn_e_p1/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "earn_e_p1",
   "name": "EARN-E P1 Meter",
-  "codeowners": [],
+  "codeowners": ["@Miggets7"],
   "config_flow": true,
-  "documentation": "https://github.com/Miggets7/HA-Earn-E-P1-Meter-Add-On",
+  "documentation": "https://github.com/Miggets7/HA-Earn-E-P1-Meter",
   "integration_type": "device",
   "iot_class": "local_push",
+  "issue_tracker": "https://github.com/Miggets7/HA-Earn-E-P1-Meter/issues",
   "requirements": [],
   "version": "1.0.0"
 }
