--- a/custom_components/earn_e_p1/manifest.json
+++ b/custom_components/earn_e_p1/manifest.json
@@ -6,6 +6,7 @@
   "documentation": "https://github.com/Miggets7/HA-Earn-E-P1-Meter",
   "integration_type": "device",
   "iot_class": "local_push",
+  "single_config_entry": true,
   "issue_tracker": "https://github.com/Miggets7/HA-Earn-E-P1-Meter/issues",
   "requirements": [],
   "version": "1.0.0"
